update for testing

--- a/index.html
+++ b/index.html
@@ -144,7 +144,45 @@
     </div>
   </div>
 </section>
-
+<section class="cmp home-showcase references">
+  <div class="grid-container">
+    <img class="showcase-head" src="assets/img/showcase.svg" alt="Ausschnitt mit meiner Cap">
+    <div class="ref-grid teaser">
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref link" href="#">
+        alle referenzen
+      </a>
+    </div>
+    <div class="ref-grid">
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+      <a class="ref">
+        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
+      </a>
+    </div>
+  </div>
+</section>
 
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
