update for testing

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
   </head>
 <body>
-<div id="custom-cursor"></div>
+<div id="custom-cursor"></div><div id="follow-cursor"></div>
 <nav id="main-navigation" data-toggler=".open">
   <div class="grid-container">
     <div class="grid-x main-nav">
@@ -50,12 +50,12 @@
         </a>
         <div class="social">
           <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram">
-            <img class="dark magnet" src="assets/img/instagram/instagram.svg" alt="">
-            <img class="white magnet" src="assets/img/instagram/instagram-white.svg" alt="">
+            <img class="dark" src="assets/img/instagram/instagram.svg" alt=Instagram">
+            <img class="white" src="assets/img/instagram/instagram-white.svg" alt="Instagram">
           </a>
           <a href="https://www.behance.net/beclamo" target="_blank" class="behance">
-            <img class="dark magnet" src="assets/img/behance/behance.svg" alt="">
-            <img class="white magnet" src="assets/img/behance/behance-white.svg" alt="">
+            <img class="dark" src="assets/img/behance/behance.svg" alt="Behance">
+            <img class="white" src="assets/img/behance/behance-white.svg" alt="Behance">
           </a>
         </div>
       </div>
@@ -73,19 +73,41 @@
     <a class="btn outline" href="#">+49 176 3247 1512</a>
   </div>
 </nav>
-<section class="cmp-about">
+<section class="about-head page-title">
   <div class="grid-container">
-    <div class="grid-x align-center">
-      <h1 class="full-width fw-black">über mich</h1>
+    <div class="grid-x">
+      <h1 class="full-width fw-black">Über mich</h1>
     </div>
   </div>
 </section>
 
-<footer>
-  <div class="grid-container">
-    <div class="grid-x">
-      <h1>footer</h1>
+<footer class="footer">
+  <div class="keil-wrap">
+    <h2 class="vertical-text">
+      <span>get in</span>
+      <span>touch</span>
+    </h2>
+    <img src="assets/img/keil/footer-keil.svg" alt="Keil als Stielelement">
+  </div>
+  <div class="dark-bg">
+    <div class="grid-container content-wrap">
+      <div class="contact">
+        <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram show-for-medium">
+          <img class="white" src="assets/img/instagram/instagram-white.svg" alt="Instagram">
+        </a>
+        <a href="https://www.behance.net/beclamo" target="_blank" class="behance show-for-medium">
+          <img class="white" src="assets/img/behance/behance-white.svg" alt="Behance">
+        </a>
+        <a class="btn outline" href="#">mordiconi@web.de</a>
+        <a class="btn outline" href="#">+49 176 3247 1512</a>
+      </div>
+      <h3>Kontakt</h3>
     </div>
+  </div>
+  <div class="grid-container legal-wrap">
+    <a href="/impressum" class="imprint">Impressum</a>
+    <img class="show-for-medium" src="assets/img/beclamo/logo-compact-dark.svg" alt="beclamo logo">
+    <a href="/datenschutz" class="data">Datenschutz</a>
   </div>
 </footer>
 
