--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   </head>
 <body>
-<div id="custom-cursor"></div>
+<div id="custom-cursor"></div><div id="follow-cursor"></div>
 <nav id="main-navigation" data-toggler=".open">
   <div class="grid-container">
     <div class="grid-x main-nav">
@@ -50,12 +50,12 @@
         </a>
         <div class="social">
           <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram">
-            <img class="dark magnet" src="assets/img/instagram/instagram.svg" alt="">
-            <img class="white magnet" src="assets/img/instagram/instagram-white.svg" alt="">
+            <img class="dark" src="assets/img/instagram/instagram.svg" alt=Instagram">
+            <img class="white" src="assets/img/instagram/instagram-white.svg" alt="Instagram">
           </a>
           <a href="https://www.behance.net/beclamo" target="_blank" class="behance">
-            <img class="dark magnet" src="assets/img/behance/behance.svg" alt="">
-            <img class="white magnet" src="assets/img/behance/behance-white.svg" alt="">
+            <img class="dark" src="assets/img/behance/behance.svg" alt="Behance">
+            <img class="white" src="assets/img/behance/behance-white.svg" alt="Behance">
           </a>
         </div>
       </div>
@@ -125,6 +125,7 @@
           <p class="info dystopian">Grafikdesigner</p>
         </div>
         <img class="face animate-face" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
+        <!-- img class="face para-scroll" data-paroller-factor="-0.1" data-paroller-type="foreground" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts" -->
       </div>
       <div class="cell about-block location">
         <div class="text">
@@ -157,189 +158,40 @@
       <a class="ref">
         <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
       </a>
-      <a class="ref link" href="#">
+      <a class="ref link" href="/referenzen.html">
         alle referenzen
-      </a>
-    </div>
-    <div class="ref-grid">
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
-      </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
-      </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
-      </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
-      </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
-      </a>
-      <a class="ref">
-        <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
       </a>
     </div>
   </div>
 </section>
 
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <h1>Welcome to Base Foundation</h1>
-        </div>
+<footer class="footer">
+  <div class="keil-wrap">
+    <h2 class="vertical-text">
+      <span>get in</span>
+      <span>touch</span>
+    </h2>
+    <img src="assets/img/keil/footer-keil.svg" alt="Keil als Stielelement">
+  </div>
+  <div class="dark-bg">
+    <div class="grid-container content-wrap">
+      <div class="contact">
+        <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram show-for-medium">
+          <img class="white" src="assets/img/instagram/instagram-white.svg" alt="Instagram">
+        </a>
+        <a href="https://www.behance.net/beclamo" target="_blank" class="behance show-for-medium">
+          <img class="white" src="assets/img/behance/behance-white.svg" alt="Behance">
+        </a>
+        <a class="btn outline" href="#">mordiconi@web.de</a>
+        <a class="btn outline" href="#">+49 176 3247 1512</a>
       </div>
-
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <div class="callout">
-            <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-            <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-            <p>Once you've exhausted the fun in this document, you should check out:</p>
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 medium-push-2 cell">
-                <p><a href="https://get.foundation/sites/docs/">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-              </div>
-              <div class="large-4 medium-4 medium-push-2 cell">
-                <p><a href="https://github.com/foundation/foundation-emails/discussions">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-              </div>
-            </div>
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 medium-push-2 cell">
-                <p><a href="http://github.com/foundation/foundation-sites">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-              </div>
-              <div class="large-4 medium-4 medium-pull-2 cell">
-                <p><a href="https://twitter.com/FoundationCSS">@FoundationCSS</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="grid-x grid-padding-x">
-        <div class="large-8 medium-8 cell">
-          <h5>Here&rsquo;s your basic grid:</h5>
-          <!-- Grid Example -->
-
-          <div class="grid-x grid-padding-x">
-            <div class="large-12 cell">
-              <div class="primary callout">
-                <p><strong>This is a twelve cell section in a grid-x.</strong> Each of these includes a div.callout element so you can see where the cell are - it's not required at all for the grid.</p>
-              </div>
-            </div>
-          </div>
-          <div class="grid-x grid-padding-x">
-            <div class="large-6 medium-6 cell">
-              <div class="primary callout">
-                <p>Six cell</p>
-              </div>
-            </div>
-            <div class="large-6 medium-6 cell">
-              <div class="primary callout">
-                <p>Six cell</p>
-              </div>
-            </div>
-          </div>
-          <div class="grid-x grid-padding-x">
-            <div class="large-4 medium-4 small-4 cell">
-              <div class="primary callout">
-                <p>Four cell</p>
-              </div>
-            </div>
-            <div class="large-4 medium-4 small-4 cell">
-              <div class="primary callout">
-                <p>Four cell</p>
-              </div>
-            </div>
-            <div class="large-4 medium-4 small-4 cell">
-              <div class="primary callout">
-                <p>Four cell</p>
-              </div>
-            </div>
-          </div>
-
-          <hr />
-
-          <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-          <form>
-            <div class="grid-x grid-padding-x">
-              <div class="large-12 cell">
-                <label>Input Label</label>
-                <input type="text" placeholder="large-12.cell" />
-              </div>
-            </div>
-            <div class="grid-x grid-padding-x">
-              <div class="large-4 medium-4 cell">
-                <label>Input Label</label>
-                <input type="text" placeholder="large-4.cell" />
-              </div>
-              <div class="large-4 medium-4 cell">
-                <label>Input Label</label>
-                <input type="text" placeholder="large-4.cell" />
-              </div>
-              <div class="large-4 medium-4 cell">
-                <div class="grid-x">
-                  <label>Input Label</label>
-                  <div class="input-group">
-                    <input type="text" placeholder="small-9.cell" class="input-group-field" />
-                    <span class="input-group-label">.com</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="grid-x grid-padding-x">
-              <div class="large-12 cell">
-                <label>Select Box</label>
-                <select>
-                  <option value="husker">Husker</option>
-                  <option value="starbuck">Starbuck</option>
-                  <option value="hotdog">Hot Dog</option>
-                  <option value="apollo">Apollo</option>
-                </select>
-              </div>
-            </div>
-            <div class="grid-x grid-padding-x">
-              <div class="large-6 medium-6 cell">
-                <label>Choose Your Favorite</label>
-                <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-                <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-              </div>
-              <div class="large-6 medium-6 cell">
-                <label>Check these out</label>
-                <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-                <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-              </div>
-            </div>
-            <div class="grid-x grid-padding-x">
-              <div class="large-12 cell">
-                <label>Textarea Label</label>
-                <textarea placeholder="small-12.cell"></textarea>
-              </div>
-            </div>
-          </form>
-        </div>
-
-        <div class="large-4 medium-4 cell">
-          <h5>Try one of these buttons:</h5>
-          <p><a href="#" class="button">Simple Button</a><br/>
-            <a href="#" class="success button">Success Btn</a><br/>
-            <a href="#" class="alert button">Alert Btn</a><br/>
-            <a href="#" class="secondary button">Secondary Btn</a></p>
-          <div class="callout">
-            <h5>So many components, girl!</h5>
-            <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-            <a href="https://get.foundation/sites/docs/" class="small button">Go to Foundation Docs</a>
-          </div>
-        </div>
-      </div>
+      <h3>Kontakt</h3>
     </div>
-
-<footer>
-  <div class="grid-container">
-    <div class="grid-x">
-      <h1>footer</h1>
-    </div>
+  </div>
+  <div class="grid-container legal-wrap">
+    <a href="/impressum" class="imprint">Impressum</a>
+    <img class="show-for-medium" src="assets/img/beclamo/logo-compact-dark.svg" alt="beclamo logo">
+    <a href="/datenschutz" class="data">Datenschutz</a>
   </div>
 </footer>
 
