--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <meta name="theme-color" content="#ffffff">
 
   </head>
-<body>
+<body id="body">
 <div id="custom-cursor"></div><div id="follow-cursor"></div>
 <nav id="main-navigation" data-toggler=".open">
   <div class="grid-container">
