--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="theme-color" content="#ffffff">
 
   </head>
-<body>
+<body id="body">
 <div id="custom-cursor"></div><div id="follow-cursor"></div>
 <nav id="main-navigation" data-toggler=".open">
   <div class="grid-container">
@@ -117,22 +117,22 @@
           <p class="title">Mein Name ist</p>
           <p class="info dystopian">Benjamin</p>
         </div>
-        <img class="cap animate-cap" src="assets/img/me/cap.png" alt="Ausschnitt mit meiner Cap">
+        <img id="paraMouse_1" class="cap parallaxMouse" data-value="8" src="assets/img/me/cap.png" alt="Ausschnitt mit meiner Cap">
       </div>
       <div class="cell about-block job">
         <div class="text">
           <p class="title">Ich bin</p>
           <p class="info dystopian">Grafikdesigner</p>
         </div>
-        <img class="face animate-face" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
-        <!-- img class="face para-scroll" data-paroller-factor="-0.1" data-paroller-type="foreground" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts" -->
+        <!-- img class="face animate-face" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts" -->
+        <img id="paraMouse_2" class="face parallaxMouse" data-value="5" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
       </div>
       <div class="cell about-block location">
         <div class="text">
           <p class="title">Ich komme aus</p>
           <p class="info dystopian">Saarbrücken</p>
         </div>
-        <img class="pullover animate-pullover" src="assets/img/me/pullover.png" alt="Ausschnitt von meinen Schultern">
+        <img id="paraMouse_3" class="pullover parallaxMouse" data-value="3" src="assets/img/me/pullover.png" alt="Ausschnitt von meinen Schultern">
       </div>
     </div>
   </div>
