--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <div class="grid-x main-nav">
       <div class="cell medium-6 show-for-medium logo-wrap">
         <a href="index.html">
-          <img class="dark" src="assets/img/beclamo/logo.svg" alt="beclamo Logo">
-          <img class="white" src="assets/img/beclamo/logo-white.svg" alt="beclamo Logo">
+          <img class="dark" src="/assets/img/beclamo/logo.svg" alt="beclamo Logo">
+          <img class="white" src="/assets/img/beclamo/logo-white.svg" alt="beclamo Logo">
         </a>
       </div>
       <div class="cell medium-6 menu-wrap">
@@ -46,22 +46,22 @@
           <span class="bottom-line"></span>
         </div>
         <a href="index.html" class="logo-compact hide-for-medium">
-          <img src="assets/img/beclamo/logo-compact.svg" alt="beclamo logo">
+          <img src="/assets/img/beclamo/logo-compact.svg" alt="beclamo logo">
         </a>
         <div class="social">
           <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram">
-            <img class="dark" src="assets/img/instagram/instagram.svg" alt=Instagram">
-            <img class="white" src="assets/img/instagram/instagram-white.svg" alt="Instagram">
+            <img class="dark" src="/assets/img/instagram/instagram.svg" alt=Instagram">
+            <img class="white" src="/assets/img/instagram/instagram-white.svg" alt="Instagram">
           </a>
           <a href="https://www.behance.net/beclamo" target="_blank" class="behance">
-            <img class="dark" src="assets/img/behance/behance.svg" alt="Behance">
-            <img class="white" src="assets/img/behance/behance-white.svg" alt="Behance">
+            <img class="dark" src="/assets/img/behance/behance.svg" alt="Behance">
+            <img class="white" src="/assets/img/behance/behance-white.svg" alt="Behance">
           </a>
         </div>
       </div>
     </div>
     <div class="open-nav">
-      <img src="assets/img/keil/nav-keil.svg" alt="Navigation Stilelement">
+      <img src="/assets/img/keil/nav-keil.svg" alt="Navigation Stilelement">
       <div class="nav-points vertical-text">
         <a class="" href="referenzen.html">referenzen</a>
         <a class="" href="about.html">über mich</a>
@@ -117,22 +117,21 @@
           <p class="title">Mein Name ist</p>
           <p class="info dystopian">Benjamin</p>
         </div>
-        <img id="paraMouse_1" class="cap parallaxMouse" data-value="8" src="assets/img/me/cap.png" alt="Ausschnitt mit meiner Cap">
+        <img class="cap parallaxMouse" data-value="8" src="assets/img/me/cap.png" alt="Ausschnitt mit meiner Cap">
       </div>
       <div class="cell about-block job">
         <div class="text">
           <p class="title">Ich bin</p>
           <p class="info dystopian">Grafikdesigner</p>
         </div>
-        <!-- img class="face animate-face" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts" -->
-        <img id="paraMouse_2" class="face parallaxMouse" data-value="5" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
+        <img class="face parallaxMouse" data-value="5" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
       </div>
       <div class="cell about-block location">
         <div class="text">
           <p class="title">Ich komme aus</p>
           <p class="info dystopian">Saarbrücken</p>
         </div>
-        <img id="paraMouse_3" class="pullover parallaxMouse" data-value="3" src="assets/img/me/pullover.png" alt="Ausschnitt von meinen Schultern">
+        <img class="pullover parallaxMouse" data-value="3" src="assets/img/me/pullover.png" alt="Ausschnitt von meinen Schultern">
       </div>
     </div>
   </div>
@@ -177,10 +176,10 @@
     <div class="grid-container content-wrap">
       <div class="contact">
         <a href="https://www.instagram.com/beclamo/" target="_blank" class="instagram show-for-medium">
-          <img class="white" src="assets/img/instagram/instagram-white.svg" alt="Instagram">
+          <img class="white" src="/assets/img/instagram/instagram-white.svg" alt="Instagram">
         </a>
         <a href="https://www.behance.net/beclamo" target="_blank" class="behance show-for-medium">
-          <img class="white" src="assets/img/behance/behance-white.svg" alt="Behance">
+          <img class="white" src="/assets/img/behance/behance-white.svg" alt="Behance">
         </a>
         <a class="btn outline" href="#">mordiconi@web.de</a>
         <a class="btn outline" href="#">+49 176 3247 1512</a>
