--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="grid-container">
     <div class="grid-x main-nav">
       <div class="cell medium-6 show-for-medium logo-wrap">
-        <a href="index.html">
+        <a href="index">
           <img class="dark" src="/assets/img/beclamo/logo.svg" alt="beclamo Logo">
           <img class="white" src="/assets/img/beclamo/logo-white.svg" alt="beclamo Logo">
         </a>
@@ -45,7 +45,7 @@
           <span class="top-line"></span>
           <span class="bottom-line"></span>
         </div>
-        <a href="index.html" class="logo-compact hide-for-medium">
+        <a href="index" class="logo-compact hide-for-medium">
           <img src="/assets/img/beclamo/logo-compact.svg" alt="beclamo logo">
         </a>
         <div class="social">
@@ -63,8 +63,8 @@
     <div class="open-nav">
       <img src="/assets/img/keil/nav-keil.svg" alt="Navigation Stilelement">
       <div class="nav-points vertical-text">
-        <a class="" href="referenzen.html">referenzen</a>
-        <a class="" href="about.html">über mich</a>
+        <a class="" href="referenzen">referenzen</a>
+        <a class="" href="about">über mich</a>
       </div>
     </div>
   </div>
@@ -157,7 +157,7 @@
       <a class="ref">
         <img class="ref-img" src="https://placebeard.it/g/680x680" alt="TEST">
       </a>
-      <a class="ref link" href="/referenzen.html">
+      <a class="ref link" href="/referenzen">
         alle referenzen
       </a>
     </div>
