--- a/referenzen/caprunia.html
+++ b/referenzen/caprunia.html
@@ -98,26 +98,26 @@
           ein Gesicht verpasst!
         </p>
         <div class="cell medium-6 facts">
-          <div class="fact-block">
+          <p class="fact-block">
             <b>Kunde</b>
-            <div>
+            <span>
               Caprunia
-            </div>
-          </div>
-          <div class="fact-block">
+            </span>
+          </p>
+          <p class="fact-block">
             <b>Branche</b>
-            <div>
+            <span>
               Outdoor / Sport
-            </div>
-          </div>
-          <div class="fact-block">
+            </span>
+          </p>
+          <p class="fact-block">
             <b>Jahr</b>
-            <div>
+            <span>
               2022
-            </div>
-          </div>
+            </span>
+          </p>
         </div>
-        <div class="cell medium-6">
+        <div class="cell medium-6 flex-container align-center-middle">
           <img class="ref-logo"
           src="../assets/img/referenzen/caprunia/logo-caprunia-white.svg" alt="caprunia Logo">
         </div>
