--- a/referenzen/snipes.html
+++ b/referenzen/snipes.html
@@ -73,7 +73,7 @@
     <a class="btn outline" href="#">+49 176 3247 1512</a>
   </div>
 </nav>
-<div class="ref-caprunia">
+<div class="ref-snipes">
   <section class="ref-header grid-container">
     <div class="logo-wrap">
       <img class="ref-logo parallaxMouse" data-value="-5"
@@ -90,10 +90,10 @@
   <section class="ref-info">
     <div class="grid-container">
       <div class="grid-x">
-        <h1 class="cell medium-6">Caprunia</h1>
+        <h1 class="cell medium-6">Snipes</h1>
         <h2 class="cell medium-6">Branding</h2>
         <p class="cell info">
-          Caprunia ist ein Onlineshop, der sich auf Outdoor-Equipment spezialisiert hat.
+          Snipes ist ein Onlineshop, der sich auf Outdoor-Equipment spezialisiert hat.
           Mit einem neuen Logo und dem passenden Corporate Design, haben wir dem Startup
           ein Gesicht verpasst!
         </p>
@@ -101,7 +101,7 @@
           <p class="fact-block">
             <b>Kunde</b>
             <span>
-              Caprunia
+              Snipes
             </span>
           </p>
           <p class="fact-block">
@@ -122,51 +122,6 @@
           src="../assets/img/referenzen/caprunia/logo-caprunia-white.svg" alt="caprunia Logo">
         </div>
       </div>
-    </div>
-  </section>
-  <section class="logo-icons-caprunia">
-    <div class="icons-wrap left">
-      <img src="../assets/img/referenzen/caprunia/icon-dark-1.svg" alt="Caprunia Icon">
-      <img src="../assets/img/referenzen/caprunia/icon-dark-2.svg" alt="Caprunia Icon">
-      <img src="../assets/img/referenzen/caprunia/icon-dark-3.svg" alt="Caprunia Icon">
-    </div>
-    <div class="icons-wrap right">
-      <img src="../assets/img/referenzen/caprunia/icon-bright-1.svg" alt="Caprunia Icon">
-      <img src="../assets/img/referenzen/caprunia/icon-bright-2.svg" alt="Caprunia Icon">
-      <img src="../assets/img/referenzen/caprunia/icon-bright-3.svg" alt="Caprunia Icon">
-    </div>
-  </section>
-  <section class="ref-font-caprunia">
-    <div class="grid-container gradient">
-      <p class="cell font-name">Syncopate — Bold</p>
-      <p class="cell full font-scroll drag-scroll">
-        <span>a</span>
-        <span>b</span>
-        <span>c</span>
-        <span>d</span>
-        <span>e</span>
-        <span>f</span>
-        <span>g</span>
-        <span>h</span>
-        <span>i</span>
-        <span>j</span>
-        <span>k</span>
-        <span>l</span>
-        <span>m</span>
-        <span>n</span>
-        <span>o</span>
-        <span>p</span>
-        <span>q</span>
-        <span>r</span>
-        <span>s</span>
-        <span>t</span>
-        <span>u</span>
-        <span>v</span>
-        <span>w</span>
-        <span>x</span>
-        <span>y</span>
-        <span>z</span>
-      </p>
     </div>
   </section>
 </div>
