--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </a>
 
       <a
-      href="referenzen/caprunia.html"
+      href="referenzen/snipes.html"
       class="ref">
         <img class="ref-img top"
         src="assets/img/referenzen/caprunia/caprunia-teaser.png"
