--- a/referenzen/caprunia.html
+++ b/referenzen/caprunia.html
@@ -137,38 +137,52 @@
     </div>
   </section>
   <section class="ref-font-caprunia">
-    <div class="grid-container gradient">
+    <div class="grid-container">
       <p class="cell font-name">Syncopate — Bold</p>
-      <p class="cell full font-scroll drag-scroll">
-        <span>a</span>
-        <span>b</span>
-        <span>c</span>
-        <span>d</span>
-        <span>e</span>
-        <span>f</span>
-        <span>g</span>
-        <span>h</span>
-        <span>i</span>
-        <span>j</span>
-        <span>k</span>
-        <span>l</span>
-        <span>m</span>
-        <span>n</span>
-        <span>o</span>
-        <span>p</span>
-        <span>q</span>
-        <span>r</span>
-        <span>s</span>
-        <span>t</span>
-        <span>u</span>
-        <span>v</span>
-        <span>w</span>
-        <span>x</span>
-        <span>y</span>
-        <span>z</span>
-      </p>
+    </div>
+    <div class="swiper swiper-font">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">a</div>
+          <div class="swiper-slide">b</div>
+          <div class="swiper-slide">c</div>
+          <div class="swiper-slide">d</div>
+          <div class="swiper-slide">e</div>
+          <div class="swiper-slide">f</div>
+          <div class="swiper-slide">g</div>
+          <div class="swiper-slide">h</div>
+          <div class="swiper-slide">i</div>
+          <div class="swiper-slide">j</div>
+          <div class="swiper-slide">k</div>
+          <div class="swiper-slide">l</div>
+          <div class="swiper-slide">m</div>
+          <div class="swiper-slide">n</div>
+          <div class="swiper-slide">o</div>
+          <div class="swiper-slide">p</div>
+          <div class="swiper-slide">q</div>
+          <div class="swiper-slide">r</div>
+          <div class="swiper-slide">s</div>
+          <div class="swiper-slide">t</div>
+          <div class="swiper-slide">u</div>
+          <div class="swiper-slide">v</div>
+          <div class="swiper-slide">w</div>
+          <div class="swiper-slide">x</div>
+          <div class="swiper-slide">y</div>
+          <div class="swiper-slide">z</div>
+        </div>
     </div>
   </section>
+  <br><br>
+  <!-- Slider main container -->
+  <div class="swiper swiper-cards">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+    </div>
+  
+  </div>
 </div>
 
 <footer class="footer">
@@ -200,7 +214,7 @@
     <a href="..//datenschutz" class="data">Datenschutz</a>
   </div>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="../assets/js/app.js"></script>
 </body>
 </html>
