--- a/referenzen/snipes.html
+++ b/referenzen/snipes.html
@@ -155,7 +155,7 @@
     <a href="..//datenschutz" class="data">Datenschutz</a>
   </div>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="../assets/js/app.js"></script>
 </body>
 </html>
