--- a/referenzen/caprunia.html
+++ b/referenzen/caprunia.html
@@ -140,35 +140,33 @@
     <div class="grid-container">
       <p class="cell font-name">Syncopate — Bold</p>
     </div>
-    <div class="swiper swiper-font">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">a</div>
-          <div class="swiper-slide">b</div>
-          <div class="swiper-slide">c</div>
-          <div class="swiper-slide">d</div>
-          <div class="swiper-slide">e</div>
-          <div class="swiper-slide">f</div>
-          <div class="swiper-slide">g</div>
-          <div class="swiper-slide">h</div>
-          <div class="swiper-slide">i</div>
-          <div class="swiper-slide">j</div>
-          <div class="swiper-slide">k</div>
-          <div class="swiper-slide">l</div>
-          <div class="swiper-slide">m</div>
-          <div class="swiper-slide">n</div>
-          <div class="swiper-slide">o</div>
-          <div class="swiper-slide">p</div>
-          <div class="swiper-slide">q</div>
-          <div class="swiper-slide">r</div>
-          <div class="swiper-slide">s</div>
-          <div class="swiper-slide">t</div>
-          <div class="swiper-slide">u</div>
-          <div class="swiper-slide">v</div>
-          <div class="swiper-slide">w</div>
-          <div class="swiper-slide">x</div>
-          <div class="swiper-slide">y</div>
-          <div class="swiper-slide">z</div>
-        </div>
+    <div class="scroll-x">
+      <div class="letter">a</div>
+      <div class="letter">b</div>
+      <div class="letter">c</div>
+      <div class="letter">d</div>
+      <div class="letter">e</div>
+      <div class="letter">f</div>
+      <div class="letter">g</div>
+      <div class="letter">h</div>
+      <div class="letter">i</div>
+      <div class="letter">j</div>
+      <div class="letter">k</div>
+      <div class="letter">l</div>
+      <div class="letter">m</div>
+      <div class="letter">n</div>
+      <div class="letter">o</div>
+      <div class="letter">p</div>
+      <div class="letter">q</div>
+      <div class="letter">r</div>
+      <div class="letter">s</div>
+      <div class="letter">t</div>
+      <div class="letter">u</div>
+      <div class="letter">v</div>
+      <div class="letter">w</div>
+      <div class="letter">x</div>
+      <div class="letter">y</div>
+      <div class="letter">z</div>
     </div>
   </section>
   <br><br>
