update for testing

--- a/about.html
+++ b/about.html
@@ -84,8 +84,8 @@
 <footer class="footer">
   <div class="keil-wrap">
     <h2 class="vertical-text">
-      <span>get in</span>
-      <span>touch</span>
+      <span class="hidden delay-2 slow slide-in-left">get in</span>
+      <span class="hidden delay-2 slow slide-in-right">touch</span>
     </h2>
     <img src="assets/img/keil/footer-keil.svg" alt="Keil als Stielelement">
   </div>
