--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <section class="home-header">
   <img class="logo hide-for-medium" src="assets/img/beclamo/logo.svg" alt="beclamo Logo">
   <h1 class="vertical-text">
-    <span>Designstudio</span>
-    <span>Saarbrücken</span>
+    <span class="hidden delay-2 slow slide-in-left">Designstudio</span>
+    <span class="hidden delay-2 slow slide-in-right">Saarbrücken</span>
   </h1>
   <img src="assets/img/keil/home-keil.svg" alt="Keil als Stielelement">
 </section>
@@ -114,22 +114,22 @@
     <div class="grid-x about-wrap">
       <div class="cell about-block name">
         <div class="text">
-          <p class="title">Mein Name ist</p>
-          <p class="info dystopian">Benjamin</p>
+          <p class="title hidden slide-up delay-1">Mein Name ist</p>
+          <p class="info dystopian hidden slide-up delay-2">Benjamin</p>
         </div>
         <img class="cap parallaxMouse" data-value="8" src="assets/img/me/cap.png" alt="Ausschnitt mit meiner Cap">
       </div>
       <div class="cell about-block job">
         <div class="text">
-          <p class="title">Ich bin</p>
-          <p class="info dystopian">Grafikdesigner</p>
+          <p class="title hidden slide-up delay-1">Ich bin</p>
+          <p class="info dystopian hidden slide-up delay-2">Grafikdesigner</p>
         </div>
         <img class="face parallaxMouse" data-value="5" src="assets/img/me/face.png" alt="Ausschnitt meines Gesichts">
       </div>
       <div class="cell about-block location">
         <div class="text">
-          <p class="title">Ich komme aus</p>
-          <p class="info dystopian">Saarbrücken</p>
+          <p class="title hidden slide-up delay-1">Ich komme aus</p>
+          <p class="info dystopian hidden slide-up delay-2">Saarbrücken</p>
         </div>
         <img class="pullover parallaxMouse" data-value="3" src="assets/img/me/pullover.png" alt="Ausschnitt von meinen Schultern">
       </div>
@@ -146,7 +146,7 @@
 </section>
 <section class="cmp home-showcase references">
   <div class="grid-container">
-    <img class="showcase-head" src="assets/img/showcase.svg" alt="Ausschnitt mit meiner Cap">
+    <img class="showcase-head hidden rotate slow" src="assets/img/showcase.svg" alt="Ausschnitt mit meiner Cap">
     <div class="ref-grid teaser">
 
       <a
@@ -183,8 +183,8 @@
 <footer class="footer">
   <div class="keil-wrap">
     <h2 class="vertical-text">
-      <span>get in</span>
-      <span>touch</span>
+      <span class="hidden delay-2 slow slide-in-left">get in</span>
+      <span class="hidden delay-2 slow slide-in-right">touch</span>
     </h2>
     <img src="assets/img/keil/footer-keil.svg" alt="Keil als Stielelement">
   </div>
