--- a/referenzen/caprunia.html
+++ b/referenzen/caprunia.html
@@ -80,8 +80,8 @@
       src="../assets/img/referenzen/caprunia/logo-caprunia.svg" alt="caprunia Logo">
     </div>
     <p class="vertical-text">
-      <span>scroll</span>
-      <span>down</span>
+      <span class="hidden delay-3 slow slide-in-left">scroll</span>
+      <span class="hidden delay-3 slow slide-in-right">down</span>
     </p>
     <svg id="ref-keil" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192.88 276.3">
       <path class="cls-1" d="M174,274.39c-12.02-2.46-23.45-7.27-33.61-14.14-15.11-10.2-26.94-24.57-34.06-41.36-2.4-5.69-4.24-11.6-5.48-17.65-1.27-6.23-1.91-12.58-1.91-18.94v1.9L96.94,0h-1l-2,184.11v-1.82c0,6.36-.64,12.71-1.91,18.94-1.24,6.05-3.07,11.96-5.48,17.65-2.37,5.59-5.27,10.94-8.67,15.97-3.37,4.99-7.22,9.65-11.48,13.91-4.26,4.26-8.92,8.1-13.91,11.48-5.03,3.4-10.38,6.3-15.97,8.67-5.69,2.4-11.6,4.24-17.64,5.48-6.22,1.27-12.54,1.91-18.89,1.91H192.88c-6.34,0-12.67-.64-18.88-1.91Z"/>
@@ -169,25 +169,98 @@
       <div class="letter">z</div>
     </div>
   </section>
-  <br><br>
-  <!-- Slider main container -->
-  <div class="swiper swiper-cards">
-    <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-    </div>
+  <section class="cmp-colorbook">
+    <h3 class="full-width fw-black hide-for-large">colorbook</h3>
+    <div class="colorbook-wrap grid-container">
+      <div class="img-wrap show-for-large">
+        <img class="colorbook-svg" src="../assets/img/colorbook-outline.png" alt="Colorbook">
+        <div class="colorbook-title"></div>
+      </div>
+      <div class="card-wrap">
+        <div class="swiper swiper-cards">
+          <div class="swiper-wrapper">
   
-  </div>
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+            <div class="swiper-slide">
+              <div class="color-code">
+                <div class="hex">
+                  <div class="title">HEX</div>
+                  <div class="code">
+                    #262626
+                  </div>
+                </div>
+                <div class="rgb">
+                  <div class="title">RGB</div>
+                  <div class="code">
+                    38<span>38</span>38
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 
 <footer class="footer">
   <div class="keil-wrap">
     <h2 class="vertical-text">
-      <span>get in</span>
-      <span>touch</span>
+      <span class="hidden delay-2 slow slide-in-left">get in</span>
+      <span class="hidden delay-2 slow slide-in-right">touch</span>
     </h2>
     <img src="../assets/img/keil/footer-keil.svg" alt="Keil als Stielelement">
   </div>
