--- a/referenzen.html
+++ b/referenzen.html
@@ -76,7 +76,7 @@
 <section class="references-head page-title">
   <div class="grid-container">
     <div class="grid-x">
-      <h1 class="full-width fw-black">Referenzen</h1>
+      <h1 class="full-width fw-black hidden slide-up">Referenzen</h1>
     </div>
   </div>
 </section>
@@ -108,8 +108,8 @@
 <footer class="footer">
   <div class="keil-wrap">
     <h2 class="vertical-text">
-      <span>get in</span>
-      <span>touch</span>
+      <span class="hidden delay-2 slow slide-in-left">get in</span>
+      <span class="hidden delay-2 slow slide-in-right">touch</span>
     </h2>
     <img src="assets/img/keil/footer-keil.svg" alt="Keil als Stielelement">
   </div>
