--- a/referenzen/caprunia.html
+++ b/referenzen/caprunia.html
@@ -173,7 +173,7 @@
     <h3 class="full-width fw-black hide-for-large">colorbook</h3>
     <div class="colorbook-wrap grid-container">
       <div class="img-wrap show-for-large">
-        <img class="colorbook-svg" src="../assets/img/colorbook-outline.png" alt="Colorbook">
+        <img class="colorbook-svg" src="../assets/img/colorbook-outline.svg" alt="Colorbook">
         <div class="colorbook-title"></div>
       </div>
       <div class="card-wrap">
